TAG: qcreports_db-5-2-0, -1, -2
DATE: 01/19/2001, 01/22/2001
STAFF: lec
RELEASE: A
CHANGES:
a) TR 2193; MRK_Alleles.sql
b) cleaned up "nocount"s

TAG: qcreports_db-5-1-0, -1
DATE: 01/17/2001, 01/19/2001
STAFF: lec
RELEASE: A
CHANGES:
a) TR 2199; MRK_MappedNoRef.sql; qcr.html

TAG: qcreports_db-5-0-0
DATE: 01/16/2001
STAFF: lec
RELEASE: A
CHANGES:
a) changed Install

TAG: qcreports_db-4-9-0
DATE: 01/16/2001
STAFF: lec
RELEASE: A
CHANGES:
a) added link to RIKEN load

TAG: qcreports_db-4-8-0
DATE: 01/02/2001
STAFF: lec
RELEASE: A
CHANGES:
a) TR 2144; HMD_NoMouseSeq.sql

TAG: qcreports_db-4-7-0
DATE: 12/15/2000
STAFF: lec
RELEASE: A
CHANGES:
a) TR 2116; GXD_Stats.sql

TAG: qcreports_db-4-6-0, -1
DATE: 12/01/2000
STAFF: lec
RELEASE: A
CHANGES:
a) TR 2092; MRK_Offsets.sql

TAG: qcreports_db-4-5-0
DATE: 11/08/2000
STAFF: lec
RELEASE: A
CHANGES:
a) TR 2067; BIB_GBSubNoMarker.sql
b) TR 2069; BIB_GBSubMatch.sql

TAG: qcreports_db-4-4-0
DATE: 11/02/2000
STAFF: lec
RELEASE: A
CHANGES:
a) NOMEN_Reserved.py; exclude RIKEN symbols

TAG: qcreports_db-4-3-0
DATE: 10/25/2000
STAFF: lec
RELEASE: A
CHANGES:
a) TR 2036; MRK_Withdrawn.sql

TAG: qcreports_db-4-2-0
DATE: 10/10/2000
STAFF: lec
RELEASE: A
CHANGES:
a) TR 2003; modify PRB_NoMarkerSeq.sql
b) TR 2004; new GXD_NotGene.sql

TAG: qcreports_db-4-1-1
DATE: 09/22/2000
STAFF: lec
RELEASE: A
CHANGES:
a) TR 1957; new QC report

TAG: qcreports_db-4-1-0
DATE: 09/22/2000
STAFF: lec
RELEASE: A
CHANGES:
a) TR 1957; new QC report

TAG: qcreports_db-4-0-0
DATE: 09/18/2000
STAFF: lec
RELEASE: A
CHANGES:
a) renamed installapp to Install

TAG: qcreports_db-3-2-1
DATE: 08/14/2000
STAFF: lec
RELEASE: A
CHANGES:
a) added link to SwissProt Data and Logs

TAG: qcreports_db-3-2-0
DATE: 08/14/2000
STAFF: lec
RELEASE: A
CHANGES:
a) added link to SwissProt Data and Logs

TAG: qcreports_db-3-1-0
DATE: 08/10/2000
STAFF: lec
RELEASE: A
CHANGES:
a) TR 1872; Nomenclature Resevered Symbols

TAG: qcreports_db-3-0-0
DATE: 08/07/2000
STAFF: lec
RELEASE: A
CHANGES: